# spectral-shape

./: AGENT.md  Cargo.toml  README.md
examples/: heat_kernel_signatures.rs  scale_space_analysis.rs  shape_distance.rs  spectral_embedding.rs
memory/: JOURNAL.md
src/: descriptor.rs  embedding.rs  heat.rs  laplacian.rs  lib.rs  main.rs  scale.rs  wave.rs
